EM has edited all but the end of the concluding section

--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -1,3 +1,9 @@
+CERRAR CON ELEMENTOS DE LOS 2 PARRAFOS SIGUIENTES
+
+
+Furthermore, the very need for speedy passage calls for mechanisms to accelerate the process, and those mechanisms, scarcely noticeable, may protect bills from the amendment process on the floor. If there is a restrictive rule attached to the urgency label, when the president labels a bill urgent, the bill will not be amendable on the floor.
+
+
 
 
 (eval-after-load "tex-mode" '(fset 'tex-font-lock-suscript 'ignore))
