--- a/escrito/tmp.tex
+++ b/escrito/tmp.tex
@@ -1,3 +1,14 @@
+\begin{abstract}
+\noindent  Among presidents' lesser known legislative powers is urgency authority. Seven Latin American presidents have it: the constitutional power to impose on lawmakers a short deadline to discuss and vote selected bills. The paper equates urgency with the fast track authority that Congress grants periodically to the U.S.\ president. With this insight, we claim that the key consequence of urgency authority, tacit in all constitutions, is procedural: urgency prevents amendments during floor consideration. Presidents thereby earn the ability to protect bills and committee agreements, turning the president into the sole member of a Rules Committee with ability to impose closed rules on the floor. We derive hypotheses from a formal model of fast track authority and test them using data from Chile between 1998 and 2014. Results show that preference overlap between president and committee chairs drives reliance on urgency authority systematically. The patterns uncovered are reminiscent of restrictive rule usage in the U.S.
+\end{abstract}
+
+We show that fast track mechanisms may conceal motivations unrelated to speed, as it prevents amendments on the floor.
+
+
+\noindent  Among presidents' lesser known legislative powers is fast track authority, commonly called urgency authority. Seven Latin American presidents have the constitutional prerogative to impose on lawmakers a short time limit to discuss and vote bills using this track. The U.S.\ president has also been granted this authority through statutes. Yet, fast-track mechanisms are not always intended to set the agenda and speed legislation along. While in most countries non-compliance with the deadline has consequences for the legislature, there are cases where the absence of congressional action before the target date has no repercussions. We show that fast track mechanisms may conceal motivations unrelated to speed, as it prevents amendments on the floor. We argue that this authority gives presidents the ability to protect bills and agreements, transforming the president into the sole member of a Rules Committee with the unique ability to impose closed rules on the floor.  We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.
+
+
+
 CERRAR CON ELEMENTOS DE LOS 2 PARRAFOS SIGUIENTES
 
 
