--- a/gesValeriaEric/paper/urge13.tex
+++ b/gesValeriaEric/paper/urge13.tex
@@ -70,9 +70,8 @@
 %\begin{center} \textbf{$\rightarrow$~~Preliminary draft~~$\leftarrow$} \\ (please inquire for new version, \small{\url{emagar@itam.mx}})  \end{center}
 
 \begin{abstract}
-\noindent  Among Presidents' formidable proactive legislative powers is fast-track authority, sometimes called urgency authority. Seven Latin American presidents have the constitutional prerogative to impose on lawmakers a short time limit to discuss and vote bills using this track. The U.S. president has also been granted this authority through statutes. Yet, fast-track mechanisms are not always intended to set the agenda and speed legislation along. While in most countries non-compliance with the deadline has consequences for the legislature, there are cases where the absence of congressional action before the target date has no repercussions. We show that fast track mechanisms may conceal motivations unrelated to speed, as it prevents amendments on the floor. We argue that this authority gives presidents the ability to protect bills and agreements, transforming the president into the sole member of a Rules Committee with the unique ability to impose closed rules on the floor.  We derive hypotheses from a formal model of restrictive rules and test them using data from Chile for the 1998--2014 period. Extant research on Chile has shown that most executive proposals become urgent at some stage, and while urgency correlates with the odds of passage, they have found little evidence that it speeds consideration of the president's agenda in Congress.\end{abstract}
-
-% ME PARECE QUE ESTO DE CHILE NO TENDRIA QUE IR AHI, LO QUEREMOS HACER LO MAS GENERAL POSIBLE, NO? We suggest that the main reason behind the use of fast-track authority in Chile is to give presidents the ability to shield bills coming from friendly committees from floor amendments. Thus, instead of being a mechanism to speed up the process, presidents' fast-track authority is similar to imposing a "closed rule" on the floor.
+\noindent  Among presidents' lesser known legislative powers is urgency authority. Seven Latin American presidents have it: the constitutional power to impose on lawmakers a short deadline to discuss and vote selected bills. The paper equates urgency with the fast track authority that Congress grants periodically to the U.S.\ president. With this insight, we claim that the key consequence of urgency authority, tacit in all constitutions, is procedural: urgency prevents amendments during floor consideration. Presidents thereby earn the ability to protect bills and committee agreements, turning the executive into the sole member of a Rules Committee with ability to impose closed rules on the floor. We derive hypotheses from a formal model of fast track authority and test with data from Chile between 1998 and 2014. Results confirm that preference overlap between president and committee chairs drives reliance on urgency authority systematically. Patterns in Chile are reminiscent of restrictive rule usage in the U.S.
+\end{abstract}
 
 % comentarios de Calvo
 %Comentarios a Magar: Presidential obstruction of the agenda in Chile’s Congress
@@ -172,21 +171,17 @@
 
 %% No consulté esto, mi única fuente fue el Reglamento 2015. 
 
-
 %% 2. Sigue también pendiente encontrar una versión del reglamento de la cámara anterior a 2010 para verificar si la closed rule antes aplicaba sólo a la suma urgencia.
 
 %% Adjunto memo sobre reglamento 2015 que tiene, al principio, todas las enmiendas al reglamento. Después, un resumen de todo lo que se dice en el Reglamento acerca de las urgencias. Las reformas, para hacer lo mismo hacia atrás, son muchas, habría que ver cuáles nos interesan. Eric, si tienes en mente una en particular, dime cuál. Le encargaré a un RA hacer el seguimiento de los artículos que yo identifiqué en el Regla 2015 hacia atrás, pero es un trabajo tremendo así que si lo podemos acotar, mejor.
 
 %% 3. Algunas ideas para un nuevo título que aluda a Relic:
 
-%% -Presidents with fast track authority: Fighting floor amendments in the Chilean Cámara
 %% -Presidential fast track authority: More a Previous Question than a privileged motion
 %% -Not faster/Not an accelerator but a shield against plenary amendments
 %% -Not a car pool lane but a cloture of highway exits
-%% -Presidents with fast track authority cannot accelerate
+%% -Presidents with fast track authority who cannot accelerate
 %% -Not an accelerator, a take-it-or-leave-it rule
-
-%% Estamos en contacto, le mando besos.
 
 \doublespacing
 
@@ -830,23 +825,24 @@ Finally, there are time trends in fast-track authority usage that simulations re
 
 \section{Discussion}
 
-This paper has argued that the effects of urgency authority are procedural. Proposals that presidents qualify as urgent are considered under restrictive rules by the chamber's plenary. We have portrayed Latin American constitutional urgency authority as equivalent to the fast track authority that United States presidents often enjoy. While all constitutions remain silent about prodecural implications of urgencies, and we have verified that our characterization matches Chilean sub-constitutional institutions only, it is plausible and likely that others do too. After all, the rationale of the urgency authority is expediting the legislative process, and restrictive rules are a natural choice to speed urgent bills' consideration before an explicit deadline expires. 
+This paper has argued that the effects of urgency authority are procedural. Proposals that presidents qualify as urgent are considered under restrictive rules by the chamber's plenary. We have portrayed Latin American constitutional urgency authority as equivalent to the fast track authority that United States presidents enjoy periodically. While all constitutions remain silent about prodecural implications of urgencies, and we have verified that our characterization matches Chilean sub-constitutional institutions only, it is plausible and likely that others do too. After all, the rationale of the urgency authority is expediting the legislative process, and restrictive rules are a natural choice to speed urgent bills' consideration before an explicit deadline expires. 
 
-Our formal model of the fast track authority shows that preference overlap between the president and the reporting committee is the mechanism driving the choice to fast track for any given bill. A systematic analysis of the Chilean legislative process in recent years finds evidence that, other things constant, bills reported by committees chaired by members of the president's coalition/party are about twice as likely to be fast-tracked than the rest. To the extent that parties and coalitions indicate preference overlap (as is accepted in Chile), the evidence supports our main theoretical results.
+Our formal model of the fast track authority shows that preference overlap between the president and the reporting committee is the mechanism driving the choice to put bills on the fast track. A systematic analysis of proposals in the Chilean lower chamber in recent years finds evidence that, other things constant, bills reported by committees chaired by members of the president's coalition/party are about twice as likely to be fast-tracked than the rest. To the extent that parties and coalitions indicate preference overlap (as is accepted in Chile), the evidence supports our main theoretical results.
 
-LO DE HOWEL MOE NO QUEDABA BIEN EN SECCION 3, DISTRAIA. LO MOVI AQUI. EN ESTA CONCLU HAY QUE LEER HOWELL Y MOE A LA LUZ DE NUESTROS HALLAZGOS PARA MOSTRAR POR QUE DEBE IMPORTARLE NUESTRO PAPER A UN AMERICANISTA.
+Our results and findings are of natural interest to students of comparative political institutions, especially those with interest in legislative procedure and separation of powers. And those in the field of American Politics should find our equating of urgency and fast track authorities illuminating. In a provocative book, \citet{howell.moe.Relic2016} make an argument in favor of giving U.S.\ presidents permanent fast track authority not limited to trade agreements. In order to have a coherent and effective government, they argue in favor constitutional reform to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time'' (145). Failure to vote in due time would turn bills on the fast track into law. We called this the automatic adoption variant of urgency authority. Reformers would make presidents similar to those in Ecuador, Paraguay, and Uruguay. 
+%``[...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments)'' (145, emphasis in the original)
 
-In an excellent and very provocative book, \citet[][:145]{howell.moe.Relic2016} make an argument in favor of giving US presidents fast track authority in all realms of policy, not just trade agreements. They argue that in order to have a coherent and effective government, a constitutional reform needs to put the president at the center of the legislative process: ``presidents should be granted enhanced agenda-setting powers to propose bills to Congress, which Congress should then be required to vote on without amendment, on a strictly majoritarian basis, within a fixed period of time. [...] [T]he Constitution would be amended to grant the president \emph{permanent} fast-track authority over \emph{all} policy matters (including budgets and appointments).'' If Congress fails to act with a certain period of time, then the presidential proposal should become law.
+Fast track authority is not dictatorial. Congress retains authority to reject urgent proposals, and is therefore never worse-off than the status quo. But, our model shows, the associated closed rule buys presidents substantial influence in lawmaking through selection (or perhaps direct negotiation with committee chairs) of reports strategically allocating the bulk of gains in her favor. 
 
-Our analysis reveals the this reform would make the U.S.\ similar to the design of Uruguay, Ecuador, or Paraguay. 
+AQUI AQUI AQUI
 
-Convendrá elaborar la relevancia de que la retrictive rule esté en manos del presidente. ¿Por qué no retienen esa facultad los legisladores?
+Convendrá elaborar, para cerrar, la relevancia de que la retrictive rule esté en manos del presidente? ¿Por qué no retienen esa facultad los legisladores? Hay pedazos quizás útiles en lo que sigue...
 
-The first difference that sets apart fast-track mechanisms in the United States and elsewhere is the fact that while it is Congress that authorizes this authority in the US setting, in Latin America it is the president that can impose this label on bills and affect the process that takes place in congress. Likewise, since the late Nineteenth Century, restrictive rules are the domain of the Rules Committee in the U.S.\ House \citep{denhartog.2004phd,cox.mccubbins.2005,sin.2014}. However, it is the president who has possession of this key legislative prerogative under urgency/fast track authority. The executive branch decides which bills go to the floor with a closed rule. 
+%The first difference that sets apart fast-track mechanisms in the United States and elsewhere is the fact that while it is Congress that authorizes this authority in the US setting, in Latin America it is the president that can impose this label on bills and affect the process that takes place in congress. Likewise, since the late Nineteenth Century, restrictive rules are the domain of the Rules Committee in the U.S.\ House \citep{denhartog.2004phd,cox.mccubbins.2005,sin.2014}. However, it is the president who has possession of this key legislative prerogative under urgency/fast track authority. The executive branch decides which bills go to the floor with a closed rule. 
 
-This paper has elaborated some implications of this peculiar, inter-branch institutional arrangement. It argues that where fast-track mechanisms take the form that they take in Latin America, i.e., where it is the president that imposes the procedure on congress, then we should expect it to be associated to mechanisms that will ensure that presidential preferences are to some extent preserved. The case of Chile illustrates how this combined institutional arrangement is used, in fact, when the president can rely on committees having preferences proximate to her own.
+%This paper has elaborated some implications of this peculiar, inter-branch institutional arrangement. It argues that where fast-track mechanisms take the form that they take in Latin America, i.e., where it is the president that imposes the procedure on congress, then we should expect it to be associated to mechanisms that will ensure that presidential preferences are to some extent preserved. The case of Chile illustrates how this combined institutional arrangement is used, in fact, when the president can rely on committees having preferences proximate to her own.
 
-Empirically, we found that when the committee chair's preferences are closer to those of the President, then the probabilities that bills will be labeled as urgent increases. That is, when committee chairs negotiate and agree with the president on the bill they want to see enacted, the president imposes a closed rule on it to prevent the bill from being modified by the floor.  In other words, this institutional tool takes away bargaining authority from the floor majority and places it in hands of committee chairs. Committee chair and President commit to a deal that cannot be undone because it is protected by an urgent label that secures a closed rule.
+%Empirically, we found that when the committee chair's preferences are closer to those of the President, then the probabilities that bills will be labeled as urgent increases. That is, when committee chairs negotiate and agree with the president on the bill they want to see enacted, the president imposes a closed rule on it to prevent the bill from being modified by the floor.  In other words, this institutional tool takes away bargaining authority from the floor majority and places it in hands of committee chairs. Committee chair and President commit to a deal that cannot be undone because it is protected by an urgent label that secures a closed rule.
 
 %Thus, in all and as part of a literature that highlights the extraordinary legislative influence of presidents in Latin America, emphasis has been placed on presidents' exclusive proposal rights for certain bills, their capacity to veto bills totally and partially, and to propose amendments at different stages of the legislative process \citep{carey.shugart.1998,baldez.carey.1999,aleman.navia.UrgChi.2009,tsebelis.aleman.2005}. Less attention has been devoted to the influence granted to the president when she can declare certain bills urgent and by doing so, affect how congress deals with its agenda. We view this influence as stemming from the prerogative to qualify bills ``urgent'', which in certain cases imposes restrictive rules for floor consideration, apart from acting as a bill accelerator or a signal of presidential priority.
 
